--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "formation javascript",
   "main": "index.js",
+  "index": "index.html",
   "scripts": {
+    "start": "http-server -p 9000",
+    "babel": "babel src --out-dir build ",
+    "webpack": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +23,10 @@
   "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.5"
+    "@babel/preset-env": "^7.14.5",
+    "http-server": "^0.12.3",
+    "requirejs": "^2.3.6",
+    "webpack": "^5.39.1",
+    "webpack-cli": "^4.7.2"
   }
 }
